# what-s-for-dinner-bot

./: LICENSE  README.md  pyproject.toml
src/: settings.py
src/bot/: bot.py
src/bot/constants/: callback_data.py  commands.py  states.py
src/bot/handlers/: get.py  hello.py
